<resources>
    <string name="app_name">VT6002CEM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_label">Login</string>
    <string name="Register_label">Register</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>

    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>

    <!-- Strings used for login -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_title">Login</string>
    <string name="login_btn">Login</string>

    <!-- Strings used for register -->
    <string name="register_title">Register</string>
    <string name="register_btn">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_here">Login Here</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings used for logout -->
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="select_and_press_predict">Select and Press Predict</string>
    <string name="camera">Camera</string>
    <string name="predict">Predict</string>
    <string name="select">Select</string>
    <string name="biometric_status">Status</string>
    <string name="bio_btn">Bio Login</string>
    <string name="weather_app">Weather</string>

</resources>